--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -356,12 +356,12 @@
         },
         "model": {
           "title": "Модель Soniox",
-          "description": "Идентификатор модели, который AivoRelay отправляет в Soniox при каждом запросе. В AivoRelay модели stt-rt-* включают live-стриминг с появлением текста во время речи, а stt-async-* используют не-live путь, где итог появляется после обработки.",
+          "description": "Идентификатор модели, который AivoRelay отправляет в Soniox при каждом запросе. В AivoRelay модели stt-rt-* при Live=ON используют live WebSocket-путь с появлением текста во время речи; stt-async-* (или Live=OFF) используют не-live путь, где итог появляется после обработки. Если поведение кажется неожиданным, сначала проверьте семейство модели и переключатель Live.",
           "placeholder": "stt-rt-v4"
         },
         "timeout": {
           "title": "Таймаут Soniox (секунды)",
-          "description": "Общий таймаут для non-live/legacy Soniox запросов и async-операций (10-300 секунд). В UX AivoRelay большее значение снижает риск ложных таймаутов на медленной сети, но при реальной ошибке ждать придётся дольше."
+          "description": "Общий таймаут для non-live Soniox запросов и async-операций с файлами (10-300 секунд). В UX AivoRelay большее значение снижает риск ложных таймаутов на медленной сети, но при реальной ошибке ждать придётся дольше. Область действия: этот параметр не управляет таймингом активной Live-сессии."
         },
         "live": {
           "title": "Live real-time стриминг",
@@ -370,45 +370,45 @@
         },
         "languageHints": {
           "title": "Language hints",
-          "description": "Коды языков ISO через запятую (например: en, es). Soniox будет склоняться к этим языкам, что в AivoRelay обычно улучшает точность и уменьшает случайные переключения на другой язык.",
+          "description": "Коды языков ISO через запятую (например: en, es). Soniox будет склоняться к этим языкам, что обычно улучшает точность и уменьшает случайные переключения на другой язык. Область действия: применяется в Live-режиме и как значения по умолчанию для Transcribe File (Soniox); в non-live shortcut fallback этот список сейчас не используется напрямую, там hint выводится из текущего языка профиля/глобального языка.",
           "placeholder": "en, es",
           "supportedLanguagesLink": "Поддерживаемые языки"
         },
         "profileLanguageHintOnly": {
           "title": "Использовать язык текущего профиля как hint",
-          "description": "Если включено, AivoRelay игнорирует список Language Hints и отправляет ровно один hint из языка активного профиля (или глобального языка, если профиль не активен). Это синхронизирует языковой bias Soniox с профилем и исключает устаревшие ручные hints."
+          "description": "Если включено, AivoRelay игнорирует список Language Hints и отправляет ровно один hint из языка активного профиля (или глобального языка, если профиль не активен). Это синхронизирует языковой bias Soniox с профилем и исключает устаревшие ручные hints. Область действия: поведение Live-режима; параметр не перенастраивает Soniox async file options и non-live shortcut fallback."
         },
         "languageHintsStrict": {
           "title": "Строгое ограничение языка",
-          "description": "Рекомендуемое использование: по возможности указывайте один язык. Этот режим работает максимально надёжно, когда задан только один язык. Пример: { \"language_hints\": [\"en\"], \"language_hints_strict\": true }. Если указать несколько языков, устойчивость падает: при неоднозначной идентификации (сильный акцент, акустически похожие языки) точность может ухудшиться. Пример: { \"language_hints\": [\"en\", \"es\"], \"language_hints_strict\": true }. В сложных случаях модель всё равно может выбрать неверный язык/скрипт, поэтому для критичной точности рекомендуется single-language strict. В AivoRelay это лучший режим для сценариев с заранее известным одним языком."
+          "description": "Рекомендуемое использование: по возможности указывайте один язык. Этот режим работает максимально надёжно, когда задан только один язык. Пример: { \"language_hints\": [\"en\"], \"language_hints_strict\": true }. Если указать несколько языков, устойчивость падает: при неоднозначной идентификации (сильный акцент, акустически похожие языки) точность может ухудшиться. Пример: { \"language_hints\": [\"en\", \"es\"], \"language_hints_strict\": true }. В сложных случаях модель всё равно может выбрать неверный язык/скрипт, поэтому для критичной точности рекомендуется single-language strict. Область действия: сейчас только Live-режим; флаг не отправляется в non-live shortcut fallback и Soniox async file запросы."
         },
         "endpointDetection": {
           "title": "Endpoint detection",
-          "description": "Разрешает Soniox автоматически определять конец фразы и финализировать токены (маркер <end>). В AivoRelay это делает поведение «живее»: итоговые слова стабилизируются быстрее на паузах."
+          "description": "Разрешает Soniox автоматически определять конец фразы и финализировать токены (маркер <end>). В AivoRelay это делает поведение «живее»: итоговые слова стабилизируются быстрее на паузах. Область действия: в основном Live-тюнинг; в текущем non-live shortcut fallback этот флаг принудительно включён внутри кода, а Soniox async file API такого переключателя не предоставляет."
         },
         "maxEndpointDelay": {
           "title": "Макс. задержка endpoint (мс)",
-          "description": "Верхняя граница задержки после окончания речи (500-3000, по умолчанию 2000). Меньше — быстрее реакция в AivoRelay, больше — осторожнее финализация и потенциально выше стабильность на сложной речи."
+          "description": "Верхняя граница задержки после окончания речи (500-3000, по умолчанию 2000). Меньше — быстрее реакция в AivoRelay, больше — осторожнее финализация и потенциально выше стабильность на сложной речи. Область действия: только Live-режим; не применяется в non-live shortcut fallback и Soniox async file transcription."
         },
         "keepalive": {
           "title": "Интервал keepalive (сек)",
-          "description": "Как часто отправлять keepalive при тишине (5-20 секунд), чтобы WebSocket-сессия не закрывалась. Рекомендация Soniox: если аудио не отправляется, keepalive должен приходить минимум раз в 20 секунд. В AivoRelay это снижает переподключения между фразами и делает live-поток стабильнее."
+          "description": "Как часто отправлять keepalive при тишине (5-20 секунд), чтобы WebSocket-сессия не закрывалась. Рекомендация Soniox: если аудио не отправляется, keepalive должен приходить минимум раз в 20 секунд. В AivoRelay это снижает переподключения между фразами и делает live-поток стабильнее. Область действия: только Live WebSocket-сессии."
         },
         "finalizeTimeout": {
           "title": "Таймаут финализации live (мс)",
-          "description": "После Stop в Soniox live AivoRelay ждёт финальные хвостовые токены заданное время, затем принудительно закрывает сессию и переходит в idle (100-20000 мс). По умолчанию 500 мс. Большее значение чаще «долавливает» конец фразы, меньшее — ускоряет остановку, но чаще режет хвост."
+          "description": "После Stop в Soniox live AivoRelay ждёт финальные хвостовые токены заданное время, затем принудительно закрывает сессию и переходит в idle (100-20000 мс). По умолчанию 500 мс. Большее значение чаще «долавливает» конец фразы, меньшее — ускоряет остановку, но чаще режет хвост. Область действия: только Live-режим."
         },
         "instantStop": {
           "title": "Мгновенный Stop (локальная фича)",
-          "description": "Локальная фича AivoRelay: по Stop сразу завершает live-сессию Soniox и не принимает поздние чанки. UX становится максимально быстрым, но вероятность обрезания последних слов заметно выше."
+          "description": "Локальная фича AivoRelay: по Stop сразу завершает live-сессию Soniox и не принимает поздние чанки. UX становится максимально быстрым, но вероятность обрезания последних слов заметно выше. Область действия: только Live-режим."
         },
         "languageIdentification": {
           "title": "Определение языка",
-          "description": "Просит Soniox добавлять метаданные обнаруженного языка по токенам. В AivoRelay это в первую очередь полезно для анализа и отладки; обычная вставка текста по-прежнему остаётся «чистым» текстом."
+          "description": "Просит Soniox добавлять метаданные обнаруженного языка по токенам. В AivoRelay это в первую очередь полезно для анализа и отладки; обычная вставка текста по-прежнему остаётся «чистым» текстом. Область действия: флаг отправляется в Live-режиме и Soniox async file jobs; в non-live shortcut fallback WS-пути сейчас не отправляется."
         },
         "speakerDiarization": {
           "title": "Диаризация спикеров",
-          "description": "Просит Soniox добавлять метки спикеров в метаданные токенов. Для AivoRelay это полезно в multi-speaker сценариях и разборе сессий; базовый UX ввода текста обычно не меняется."
+          "description": "Просит Soniox добавлять метки спикеров в метаданные токенов. Для AivoRelay это полезно в multi-speaker сценариях и разборе сессий; базовый UX ввода текста обычно не меняется. Область действия: флаг отправляется в Live-режиме и Soniox async file jobs; в non-live shortcut fallback WS-пути сейчас не отправляется."
         },
         "apiKey": {
           "title": "API-ключ Soniox",
