--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -344,7 +344,7 @@
             "timeout": "Soniox Timeout: таймаут для не-live/legacy Soniox запросов.",
             "finalizeTimeout": "Live Finalization Timeout: сколько миллисекунд ждать финальные токены после Stop перед принудительным закрытием сессии.",
             "instantStop": "Instant Stop (фича AivoRelay): мгновенно завершает live-сессию по Stop и игнорирует поздние чанки; самый быстрый UX, но выше риск обрезать последние слова.",
-            "languageHints": "Language Hints: повышает вероятность распознавания указанных языков.",
+            "languageHints": "Language Hints: в поле нужно вводить коды через запятую (например: en, es). JSON в UI вводить не нужно; JSON в документации показывает только API-формат.",
             "profileLanguageHintOnly": "Использовать язык текущего профиля как hint: игнорирует ручной список Language Hints и отправляет ровно один hint из активного профиля (или глобального языка, если профиль не активен).",
             "strict": "Strict Language Restriction: максимально ограничивает вывод языками из hints.",
             "endpoint": "Endpoint Detection: семантическое определение конца фразы в Soniox.",
@@ -370,8 +370,8 @@
         },
         "languageHints": {
           "title": "Language hints",
-          "description": "Коды языков ISO через запятую (например: en, es). Soniox будет склоняться к этим языкам, что обычно улучшает точность и уменьшает случайные переключения на другой язык. Область действия: применяется в Live-режиме и как значения по умолчанию для Transcribe File (Soniox); в non-live shortcut fallback этот список сейчас не используется напрямую, там hint выводится из текущего языка профиля/глобального языка.",
-          "placeholder": "en, es",
+          "description": "В это поле вводите коды языков через запятую (например: en, es или en, es, ru). Не вводите JSON в это поле. Эквивалент API для двух языков: { \"language_hints\": [\"en\", \"es\"] }. Soniox будет склоняться к этим языкам, что обычно улучшает точность и уменьшает случайные переключения на другой язык. Область действия: применяется в Live-режиме и как значения по умолчанию для Transcribe File (Soniox); в non-live shortcut fallback этот список сейчас не используется напрямую, там hint выводится из текущего языка профиля/глобального языка.",
+          "placeholder": "en, es, ru",
           "supportedLanguagesLink": "Поддерживаемые языки"
         },
         "profileLanguageHintOnly": {
@@ -412,7 +412,8 @@
         },
         "apiKey": {
           "title": "API-ключ Soniox",
-          "description": "Безопасно хранится в диспетчере учётных данных Windows."
+          "description": "Безопасно хранится в диспетчере учётных данных Windows.",
+          "placeholder": "Введите ключ."
         }
       }
     },
